--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,26 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="ToolBarTheme">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
+
+
+    <style name="ToolBarTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+        <!--隐藏掉Action Bar-->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <!--溢出文字颜色-->
+        <item name="actionMenuTextColor">@android:color/white</item>
+        <!-- 菜单图标颜色-->
+        <item name="colorControlNormal">@android:color/white</item>
+    </style>
+
+
 
 </resources>
