--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
@@ -24,7 +22,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:title="Toolbar"
                 app:titleTextColor="@color/white">
 
@@ -39,18 +36,34 @@
             android:background="#FFFFFF"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <TextView
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="我是主布局"/>
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/goToToolbar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="toolbar的使用界面" />
+
+                <TextView
+                    android:id="@+id/goToTransition"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="动画" />
+            </LinearLayout>
 
             <TextView
                 android:layout_width="240dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
                 android:background="@color/white"
-                android:text="我是侧边栏"/>
+                android:text="我是侧边栏" />
 
         </android.support.v4.widget.DrawerLayout>
 
@@ -61,7 +74,7 @@
             android:layout_gravity="bottom|right"
             android:layout_margin="10dp"
             android:src="@mipmap/icon_add_white"
-            app:useCompatPadding="true"/>
+            app:useCompatPadding="true" />
     </android.support.design.widget.CoordinatorLayout>
 
 </android.support.constraint.ConstraintLayout>
